--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["Vue.volar", "nrwl.angular-console"]
+  "recommendations": ["Vue.volar", "nrwl.angular-console", "esbenp.prettier-vscode", "firsttris.vscode-jest-runner"]
 }
