--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@feedapp/root",
+  "name": "feedapp",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "serve": "nx serve app --port 8080",
+    "serve:app": "nx serve app --port 8080",
+    "serve:backend": "nx serve backend --port 3005",
     "build": "nx build app",
     "test": "nx run-many -t test --parallel 10",
     "lint": "nx run-many -t lint,stylelint --parallel 10 && nx format:check --all",
@@ -15,11 +16,16 @@
   "private": true,
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/eslint-plugin": "16.3.2",
-    "@nx/jest": "16.3.2",
-    "@nx/js": "16.3.2",
+    "@nx/jest": "16.10.0",
+    "@nx/js": "16.10.0",
     "@nx/linter": "16.3.2",
+    "@nx/nest": "^16.10.0",
+    "@nx/node": "16.10.0",
     "@nx/storybook": "^16.3.2",
+    "@nx/webpack": "16.10.0",
     "@nx/workspace": "16.3.2",
     "@storybook/addon-actions": "^7.0.24",
     "@storybook/addon-styling": "^1.3.2",
@@ -34,6 +40,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^9.15.1",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "16.3.2",
     "nx-stylelint": "^15.0.0",
     "prettier": "^2.8.8",
@@ -53,6 +61,24 @@
     "app"
   ],
   "dependencies": {
-    "code-tag": "^1.1.0"
+    "@nestjs/axios": "^3.0.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.1.13",
+    "@nestjs/typeorm": "^10.0.0",
+    "axios": "^1.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "code-tag": "^1.1.0",
+    "es6-shim": "^0.35.8",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "swagger-ui-express": "^5.0.0",
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   }
 }
