--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve:app": "nx serve app --port 8080",
     "serve:backend": "nx serve backend --port 3005",
-    "build": "nx build app",
+    "build": "nx run-many -t build --parallel 10",
     "test": "nx run-many -t test --parallel 10",
     "lint": "nx run-many -t lint,stylelint --parallel 10 && nx format:check --all",
     "lint:fix": "nx run-many -t lint:fix,stylelint:fix --parallel 10 && nx format:write --all",
@@ -33,9 +33,9 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vue/eslint-config-typescript": "^11.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -46,8 +46,9 @@
     "nx-stylelint": "^15.0.0",
     "prettier": "^2.8.8",
     "sass": "^1.53.0",
-    "stylelint": "^15.9.0",
-    "stylelint-config-standard": "^33.0.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "supabase": "^1.100.1",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -69,6 +70,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.13",
     "@nestjs/typeorm": "^10.0.0",
+    "@supabase/supabase-js": "^2.38.0",
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
