--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,6 +144,9 @@ jobs:
 
       - name: Build
         run: npx nx run-many -t build-storybook --parallel=3 --configuration=production && touch ./dist/storybook/app/.nojekyll
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_KEY: ${{ secrets.VITE_SUPABASE_KEY }}
 
       - name: Publish Storybook to Github Pages
         id: storybook
