--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,9 +108,9 @@ jobs:
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.14
         with:
-          branch: "main"
+          branch: 'main'
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "dat250-feedapp"
+          heroku_app_name: 'dat250-feedapp'
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
 
   publish-storybook:
