--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,6 +100,11 @@ jobs:
 
       - name: Build
         run: npx nx run-many -t build --parallel=3 --configuration=production
+        env:
+          VITE_REST_API_URL: ${{ secrets.VITE_REST_API_URL }}
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_KEY: ${{ secrets.VITE_SUPABASE_KEY }}
+
       - uses: actions/upload-artifact@v3
         with:
           name: dist
