--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,7 @@ on:
       - main
 
 env:
-  app-project: feedapp
-  rest-project: feedapp-api
+  project: feedapp
   account-id: 53b218bcbcf8884b7fb40d27ee50ac09
 
 jobs:
@@ -109,18 +108,6 @@ jobs:
           VITE_REST_API_URL: ${{ secrets.VITE_REST_API_URL }}
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_KEY: ${{ secrets.VITE_SUPABASE_KEY }}
-          NX_POSTGRES_HOST: ${{ secrets.NX_POSTGRES_HOST }}
-          NX_POSTGRES_USER: ${{ secrets.NX_POSTGRES_USER }}
-          NX_POSTGRES_PASSWORD: ${{ secrets.NX_POSTGRES_PASSWORD }}
-          NX_POSTGRES_PORT: ${{ secrets.NX_POSTGRES_PORT }}
-          NX_POSTGRES_DATABASE: ${{ secrets.NX_POSTGRES_DATABASE }}
-          NX_MONGODB_USERNAME: ${{ secrets.NX_MONGODB_USERNAME }}
-          NX_MONGODB_PASSWORD: ${{ secrets.NX_MONGODB_PASSWORD }}
-          NX_MONGODB_CLUSTER: ${{ secrets.NX_MONGODB_CLUSTER }}
-          NX_MONGODB_DATABASE: ${{ secrets.NX_MONGODB_DATABASE }}
-          NX_SUPABASE_URL: ${{ secrets.NX_SUPABASE_URL }}
-          NX_SUPABASE_KEY: ${{ secrets.NX_SUPABASE_KEY }}
-          NX_JWT_SECRET: ${{ secrets.NX_JWT_SECRET }}
 
       - uses: actions/upload-artifact@v3
         with:
@@ -149,35 +136,8 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ env.account-id }}
-          projectName: ${{ env.app-project }}
+          projectName: ${{ env.project }}
           directory: dist/app
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
-
-  publish-rest:
-    name: Publish REST API to Cloudflare Pages
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      deployments: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: dist
-          path: dist
-
-      - name: Publish REST API to Cloudflare Pages
-        id: publish
-        uses: cloudflare/pages-action@v1.5.0
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ env.account-id }}
-          projectName: ${{ env.rest-project }}
-          directory: dist/backend
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           branch: main
 
