--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,6 +141,33 @@ jobs:
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           branch: main
 
+  publish-rest:
+    name: Publish REST API to Cloudflare Pages
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      deployments: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
+
+      - name: Publish REST API to Cloudflare Pages
+        id: publish
+        uses: cloudflare/pages-action@v1.5.0
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ env.account-id }}
+          projectName: ${{ env.rest-project }}
+          directory: dist/backend
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
+
   publish-storybook:
     name: Publish Storybook to GitHub Pages
     runs-on: ubuntu-latest
