--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,6 +114,10 @@ jobs:
           NX_POSTGRES_PASSWORD: ${{ secrets.NX_POSTGRES_PASSWORD }}
           NX_POSTGRES_PORT: ${{ secrets.NX_POSTGRES_PORT }}
           NX_POSTGRES_DATABASE: ${{ secrets.NX_POSTGRES_DATABASE }}
+          NX_MONGODB_USERNAME: ${{ secrets.NX_MONGODB_USERNAME }}
+          NX_MONGODB_PASSWORD: ${{ secrets.NX_MONGODB_PASSWORD }}
+          NX_MONGODB_CLUSTER: ${{ secrets.NX_MONGODB_CLUSTER }}
+          NX_MONGODB_DATABASE: ${{ secrets.NX_MONGODB_DATABASE }}
 
       - uses: actions/upload-artifact@v3
         with:
