Fix syntax error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -174,7 +174,7 @@ jobs:
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
           buildpack: https://github.com/unfold/heroku-buildpack-pnpm
           healthcheck: https://api.feedapp.no/v1/health
-          procfile: web: node dist/backend/main.js
+          procfile: "web: node dist/backend/main.js"
           env_file: /.env
 
   publish-storybook:
