--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
   "name": "feedapp",
   "displayName": "FeedApp",
-  "description": "Monorepo for a complete application that allows for creating and voting on polls",
-  "author": "Eirik Måseidvåg",
   "version": "0.0.1",
-  "license": "MIT",
   "private": false,
-  "scripts": {
-    "serve:app": "nx serve app --port 8080",
-    "serve:backend": "nx serve backend --port 3005",
-    "build": "nx run-many -t build --parallel 10",
-    "test": "nx run-many -t test --parallel 10",
-    "lint": "nx run-many -t lint,stylelint --parallel 10 && nx format:check --all",
-    "lint:fix": "nx run-many -t lint:fix,stylelint:fix --parallel 10 && nx format:write --all",
-    "storybook": "nx storybook app",
-    "build-storybook": "nx run-many -t build-storybook --parallel 10",
-    "kill": "lsof -i :8080 | awk 'FNR == 2 {print $2}' | xargs kill -9"
-  },
-  "engines": {
-    "node": ">=16.14.0",
-    "npm": ">=8.14.0",
-    "pnpm": ">=8.6.0"
-  },
+  "description": "Monorepo for a complete application that allows for creating and voting on polls",
+  "license": "MIT",
+  "author": "Eirik Måseidvåg",
   "workspaces": [
     "app",
     "backend",
     "packages/*"
   ],
+  "scripts": {
+    "build": "nx run-many -t build --parallel 10",
+    "build-storybook": "nx run-many -t build-storybook --parallel 10",
+    "kill": "lsof -i :8080 | awk 'FNR == 2 {print $2}' | xargs kill -9",
+    "lint": "nx run-many -t lint,stylelint --parallel 10 && nx format:check --all",
+    "lint:fix": "nx run-many -t lint:fix,stylelint:fix --parallel 10 && nx format:write --all",
+    "serve:app": "nx serve app --port 8080",
+    "serve:backend": "nx serve backend --port 3005",
+    "storybook": "nx storybook app",
+    "test": "nx run-many -t test --parallel 10"
+  },
   "dependencies": {
+    "@headlessui/vue": "^1.7.15",
+    "@heroicons/vue": "^2.0.18",
+    "@ivanv/vue-collapse-transition": "^1.0.2",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.1.1",
@@ -45,44 +43,71 @@
     "es6-shim": "^0.35.8",
     "mongoose": "^7.6.0",
     "pg": "^8.11.3",
+    "pinia": "^2.1.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.5.0",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/eslint-plugin": "16.3.2",
-    "@nx/jest": "16.10.0",
-    "@nx/js": "16.10.0",
-    "@nx/linter": "16.3.2",
+    "@nrwl/vite": "^16.10.0",
+    "@nx/eslint-plugin": "^16.10.0",
+    "@nx/jest": "^16.10.0",
+    "@nx/js": "^16.10.0",
+    "@nx/linter": "^16.10.0",
     "@nx/nest": "^16.10.0",
-    "@nx/node": "16.10.0",
-    "@nx/storybook": "^16.3.2",
-    "@nx/webpack": "16.10.0",
-    "@nx/workspace": "16.3.2",
+    "@nx/node": "^16.10.0",
+    "@nx/storybook": "^16.10.0",
+    "@nx/webpack": "^16.10.0",
+    "@nx/workspace": "^16.10.0",
+    "@pinia/testing": "^0.1.2",
     "@storybook/addon-actions": "^7.0.24",
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/addon-interactions": "^7.0.24",
+    "@storybook/addon-links": "^7.0.24",
     "@storybook/addon-styling": "^1.3.2",
+    "@storybook/blocks": "^7.0.24",
+    "@storybook/builder-vite": "^7.0.24",
+    "@storybook/client-api": "^7.0.25",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/vue3": "^7.0.24",
+    "@storybook/vue3-vite": "^7.0.24",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@types/sinon": "^10.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-vue": "^9.15.1",
+    "happy-dom": "^9.20.3",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "16.3.2",
-    "nx-stylelint": "^15.0.0",
+    "nx": "^16.10.0",
+    "nx-stylelint": "^16.0.1",
+    "nx-vue3-vite": "^0.25.0",
+    "postcss": "^8.4.31",
     "prettier": "^2.8.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.69.2",
+    "sinon": "^15.2.0",
+    "storybook": "^7.0.24",
     "stylelint": "^15.10.3",
     "stylelint-config-standard-scss": "^11.0.0",
     "supabase": "^1.100.1",
@@ -92,6 +117,16 @@
     "tsconfig": "^7.0.0",
     "tslib": "^2.5.3",
     "typescript": "~5.1.6",
-    "vue-eslint-parser": "^9.3.1"
+    "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.16.4",
+    "vitest": "^0.32.0",
+    "vue-eslint-parser": "^9.3.1",
+    "vue-tsc": "^1.8.19",
+    "workbox-window": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=16.14.0",
+    "npm": ">=8.14.0",
+    "pnpm": ">=8.6.0"
   }
 }
