--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -199,7 +199,10 @@ jobs:
       - run: pnpm install --frozen-lockfile
 
       - name: Build
-        run: npx nx run-many -t build-storybook --parallel=3 --configuration=production && touch ./dist/storybook/app/.nojekyll
+        run: |
+          npx nx run-many -t build-storybook --parallel=3 --configuration=production &&
+          touch ./dist/storybook/app/.nojekyll &&
+          echo "storybook.feedapp.no" > ./dist/storybook/app/CNAME
         env:
           VITE_REST_API_URL: ${{ secrets.VITE_REST_API_URL }}
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
