--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -83,6 +83,7 @@ jobs:
           VITE_SUPABASE_KEY: ${{ secrets.VITE_SUPABASE_KEY }}
 
   build:
+    name: 'Build'
     runs-on: ubuntu-latest
     concurrency:
       group: build
@@ -104,6 +105,7 @@ jobs:
         run: npx nx run-many -t build --parallel=3 --configuration=production
 
   build-storybook:
+    name: 'Build Storybook'
     runs-on: ubuntu-latest
     concurrency:
       group: storybook
