--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.0",
     "code-tag": "^1.1.0",
     "es6-shim": "^0.35.8",
+    "moment": "^2.29.4",
     "mongoose": "^7.6.0",
     "pg": "^8.11.3",
     "pinia": "^2.1.4",
