--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "vue": "^3.3.4",
     "vue-i18n": "^9.5.0",
     "vue-router": "^4.2.2",
+    "vue3-clipboard": "^1.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
