--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "@nestjs/swagger": "^7.1.13",
     "@nestjs/typeorm": "^10.0.0",
     "@supabase/supabase-js": "^2.38.0",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "code-tag": "^1.1.0",
+    "date-fns": "^2.30.0",
     "es6-shim": "^0.35.8",
-    "moment": "^2.29.4",
     "mongoose": "^7.6.0",
     "pg": "^8.11.3",
     "pinia": "^2.1.4",
