--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/microservices": "^10.2.8",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.13",
@@ -95,6 +96,8 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
