--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "happy-dom": "^9.20.3",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jest-mock-extended": "^3.0.5",
     "nx": "^16.10.0",
     "nx-stylelint": "^16.0.1",
     "nx-vue3-vite": "^0.25.0",
